--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
-        <a href="github.com/mujamilhaikal" class="btn btn-lg mt-4"
+        <a href="https://github.com/mujamilhaikal/" class="btn btn-lg mt-4"
           >Lihat Undangan</a
         >
         <a id="playButton" class="btn btn-lg mt-4">Musik</a>
