--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;400;600;700&family=Sacramento&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;600;700&family=Sacramento&display=swap"
       rel="stylesheet"
     />
 
     <!-- Hitung Mundur -->
     <link rel="stylesheet" href="countdown/simplyCountdown.theme.default.css" />
     <script src="countdown/simplyCountdown.min.js"></script>
+
+    <!-- Bootstrap Icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -97,6 +103,122 @@
             </p>
           </div>
         </div>
+
+        <div class="row couple">
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-8 text-end">
+                <h3>Muhamad Haikal Mujamil</h3>
+                <p>Lorem Ipsum dolor sit amet consectur</p>
+                <p>
+                  Adalah putra pertama dari bapak A <br />dan<br />
+                  Ibu B
+                </p>
+              </div>
+              <div class="col-4">
+                <img
+                  src="src/freya.jpg"
+                  alt="haikal"
+                  class="img-responsive rounded-circle"
+                />
+              </div>
+            </div>
+          </div>
+
+          <span class="heart"><i class="bi bi-heart-fill"></i></span>
+
+          <div class="col-lg-6">
+            <div class="row">
+              <div class="col-4">
+                <img
+                  src="src/freya.jpg"
+                  alt="haikal"
+                  class="img-responsive rounded-circle"
+                />
+              </div>
+              <div class="col-8">
+                <h3>Raden Roro Freyanashifa Jayawardana</h3>
+                <p>Lorem Ipsum dolor sit amet consectur</p>
+                <p>
+                  Adalah putra pertama dari bapak A <br />dan<br />
+                  Ibu B
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="info" class="info">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>Informasi Acara</h2>
+            <p class="alamat">
+              Alamat: Gedung KORPRI Kabupaten Serang. <br />
+              Jl. Jenderal Ahmad Yani Serang, Sumurpecung, Kec. Serang, Kota
+              Serang, Banten 42117
+            </p>
+            <a
+              href="https://g.co/kgs/Mhg6GD"
+              target="_blank"
+              class="btn btn-light btn-sm my-4"
+              >Klik untuk membuka peta.</a
+            >
+            <p class="description">
+              Diharapkan untuk tidak salah alamat dan tanggal mana kala tiba
+              ditujuan namun tidak ada tanda-tanda kehidupan, boleh jadi anda
+              salah jadwal atau salah tempat.
+            </p>
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light mb-5">
+              <div class="card-header">Akad Nikah</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock d-block"></i>
+                    <span>08:00 - 10:00</span>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <i class="bi bi-calendar-day d-block"></i>
+                  <span>Minggu, 20 November 2023</span>
+                </div>
+              </div>
+              <div class="card-footer">
+                Diharapkan saat acara akad berlangsung, untuk tetap kondusif
+                menjaga kekhidmatan dan kekhusyuan seluruh rangkaian acara.
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-5 col-10">
+            <div class="card text-center text-bg-light">
+              <div class="card-header">Resepsi</div>
+              <div class="card-body">
+                <div class="row justify-content-center">
+                  <div class="col-md-6">
+                    <i class="bi bi-clock d-block"></i>
+                    <span>10:00 - Selesai</span>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <i class="bi bi-calendar-day d-block"></i>
+                  <span>Minggu, 20 November 2023</span>
+                </div>
+              </div>
+              <div class="card-footer">
+                Diharapkan saat acara akad berlangsung, untuk tetap kondusif
+                menjaga kekhidmatan dan kekhusyuan seluruh rangkaian acara.
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -110,7 +232,7 @@
       simplyCountdown(".simply-countdown", {
         year: 2023, // required
         month: 11, // required
-        day: 7, // required
+        day: 20, // required
         hours: 8, // Default is 0 [0-23] integer
         words: {
           //words displayed into the countdown
