--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Meta Tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Haikal & Freya Wedding</title>
@@ -184,10 +185,10 @@
                     <i class="bi bi-clock d-block"></i>
                     <span>08:00 - 10:00</span>
                   </div>
-                </div>
-                <div class="col-md-6">
-                  <i class="bi bi-calendar-day d-block"></i>
-                  <span>Minggu, 20 November 2023</span>
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar-day d-block"></i>
+                    <span>Minggu, 20 November 2023</span>
+                  </div>
                 </div>
               </div>
               <div class="card-footer">
@@ -206,10 +207,10 @@
                     <i class="bi bi-clock d-block"></i>
                     <span>10:00 - Selesai</span>
                   </div>
-                </div>
-                <div class="col-md-6">
-                  <i class="bi bi-calendar-day d-block"></i>
-                  <span>Minggu, 20 November 2023</span>
+                  <div class="col-md-6">
+                    <i class="bi bi-calendar-day d-block"></i>
+                    <span>Minggu, 20 November 2023</span>
+                  </div>
                 </div>
               </div>
               <div class="card-footer">
