--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                   src="src/freya.jpg"
                   alt="haikal"
                   class="img-responsive rounded-circle"
+                  loading="lazy"
                 />
               </div>
             </div>
@@ -135,6 +136,7 @@
                   src="src/freya.jpg"
                   alt="haikal"
                   class="img-responsive rounded-circle"
+                  loading="lazy"
                 />
               </div>
               <div class="col-8">
