--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Haikal & Freya Wedding</title>
+
+    <!-- Bootstrap -->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +19,8 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -35,6 +40,7 @@
 
     <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
     <section
       id="hero"
@@ -116,10 +122,7 @@
               <div class="col-8 text-end">
                 <h3>Muhamad Haikal Mujamil</h3>
                 <p>Lorem Ipsum dolor sit amet consectur</p>
-                <p>
-                  Adalah putra pertama dari bapak A <br />dan<br />
-                  Ibu B
-                </p>
+                <p>Adalah putra pertama dari bapak A <br />dan<br />Ibu B</p>
               </div>
               <div class="col-4">
                 <img
@@ -147,10 +150,7 @@
               <div class="col-8">
                 <h3>Raden Roro Freyanashifa Jayawardana</h3>
                 <p>Lorem Ipsum dolor sit amet consectur</p>
-                <p>
-                  Adalah putra pertama dari bapak A <br />dan<br />
-                  Ibu B
-                </p>
+                <p>Adalah putra pertama dari bapak A <br />dan<br />Ibu B</p>
               </div>
             </div>
           </div>
@@ -164,9 +164,8 @@
           <div class="col-md-8 col-10 text-center">
             <h2>Informasi Acara</h2>
             <p class="alamat">
-              Alamat: Gedung KORPRI Kabupaten Serang. <br />
-              Jl. Jenderal Ahmad Yani Serang, Sumurpecung, Kec. Serang, Kota
-              Serang, Banten 42117
+              Alamat: Gedung KORPRI Kabupaten Serang. <br />Jl. Jenderal Ahmad
+              Yani Serang, Sumurpecung, Kec. Serang, Kota Serang, Banten 42117
             </p>
             <a
               href="https://g.co/kgs/Mhg6GD"
@@ -229,12 +228,6 @@
         </div>
       </div>
     </section>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-      crossorigin="anonymous"
-    ></script>
 
     <script>
       simplyCountdown(".simply-countdown", {
